Applied the Major changes in GD Single pages.

--- a/assets/css/sass/widgets.scss
+++ b/assets/css/sass/widgets.scss
@@ -13,7 +13,7 @@
                 padding: 0;
             }
             &.geodir-details-sidebar-social-sharing {
-                margin: -5px 0 5px;
+                display: none;
             }
             &.geodir-details-sidebar-google-analytics {
                 min-height: initial;
