--- a/assets/css/sass/containers.scss
+++ b/assets/css/sass/containers.scss
@@ -55,7 +55,7 @@
         }
     }
 }
-body .flocks-heading-container {
+body .flocks-single-heading-container {
     background: #f6f8f9;
     width: 100%;
     margin: 0 auto;
@@ -1217,7 +1217,6 @@ dl.geodir-tab-head dd a {
 }
 
 .geodir-tabs {
-    margin-top: 15px;
     dl.geodir-tab-head {
         dd {
             margin-top: 0;
@@ -1903,5 +1902,232 @@ body .simplemodal-container#simplemodal-container {
                 color: #81C784;
             }
         }
+    }
+}
+.flocks-single-geodirectory-carousel-container {
+    li {
+        list-style: none;
+        position: relative;
+        float: left;
+        cursor: pointer;
+        &:hover {
+            cursor: all-scroll;
+            &:before {
+                opacity: 0;
+            }
+            .magnify-link {
+                transform:scale(1);
+                opacity:1;
+            }
+        }
+        &:before {
+            content: "";
+            background: #000;
+            width: 100%;
+            height: 100%;
+            opacity: 0.45;
+            position: absolute;
+            left: 0;
+            display: inline-block;
+            -webkit-transition: all 0.5s ease-in-out;
+               -moz-transition: all 0.5s ease-in-out;
+                    transition: all 0.5s ease-in-out;
+        }
+
+        .magnify-link {
+            background: rgba(0, 0, 0, 0.70);
+            width: 80px;
+            height: 80px;
+            text-align: center;
+            border: 2px solid rgb(0, 0, 0);
+            display: inline-block;
+            position: absolute;
+            top: 40%;
+            left: 45%;
+            transform:scale(1.5);
+            opacity: 0;
+            transition: transform .2s, opacity .2s;
+            @media(max-width: 480px) {
+                top: 35%;
+            }
+            &:before {
+                @extend .themepack_font_awesome_before;
+                content: "\f0b2";
+                color: #fff;
+                font-size: 30px;
+                line-height: 75px;
+            }
+        }
+    }
+
+    .flocks-single-header-carousel {
+        margin:0;
+        padding: 0;
+        opacity: 0;
+        min-height: 385px;
+        -webkit-transition: all 0.5s ease-in-out;
+           -moz-transition: all 0.5s ease-in-out;
+                transition: all 0.5s ease-in-out;
+    }
+    .flocks-single-geodirectory-carousel {
+        opacity: 1;
+        overflow: hidden;
+        position: relative;
+        min-height: inherit;
+    }
+    .owl-stage-outer {
+        z-index: 1;
+    }
+    .owl-item  {
+        display: inline-block;
+    }
+    .owl-nav {
+        position: absolute;
+        width: 100%;
+        height: auto;
+        top: 45%;
+        .owl-prev,
+        .owl-next {
+            width: 40px;
+            height: 40px;
+            color: #fff;
+            background: #000;
+            padding: 0;
+            font-size: 0;
+            line-height: normal;
+            display: inline-block;
+            opacity: 0.25;
+            position: relative;
+            z-index: 10;
+            -webkit-transition: all 0.25s ease-in-out;
+               -moz-transition: all 0.25s ease-in-out;
+                    transition: all 0.25s ease-in-out;
+            @extend .themepack_font_awesome_before;
+            &:hover {
+                opacity: 1;
+            }
+            &:before {
+                width: 40px;
+                height: 40px;
+                font-size: 35px;
+                line-height: 40px;
+                text-align: center;
+            }
+            &.disabled {
+                opacity: 0;
+                visibility: hidden;
+            }
+        }
+        .owl-prev {
+            float: left;
+            &:before {
+                content: "\f104";
+                padding-right: 5px;
+            }
+        }
+        .owl-next {
+            float: right;
+            &:before {
+                content: "\f105";
+                padding-left: 5px;
+            }
+        }
+    }
+}
+.flocks-single-heading-inner-container {
+    padding: 25px 15px;
+    .left-section,
+    .right-section {
+        @media(max-width: 992px) {
+            text-align: center;
+        }
+    }
+    .geodir-details-sidebar-social-sharing {
+        border: none;
+        margin: 0;
+        padding: 15px 0;
+        text-align: right;
+        @media(max-width: 992px) {
+            text-align: center;
+            padding-bottom: 0;
+        }
+    }
+    .likethis {
+        padding: 5px 0;
+        line-height: 0;
+        display: inline-block;
+        vertical-align: middle;
+        iframe {
+            &.facebook,
+            &.twitter-share-button {
+                max-width: 60px;
+            }
+        }
+
+        div {
+            max-width: 60px;
+        }
+    }
+}
+body .flocks-gd-mfp-wrap {
+    z-index: 999999999;
+    button.mfp-arrow {
+        width: auto;
+        &:after {
+            display: none;
+        }
+        &:before {
+            width: 40px;
+            height: 40px;
+            color: #fff;
+            background: #000;
+            padding: 0;
+            margin: 0;
+            font-size: 35px;
+            border: none;
+            line-height: normal;
+            display: inline-block;
+            opacity: 1;
+            position: relative;
+            z-index: 10;
+            -webkit-transition: all 0.25s ease-in-out;
+               -moz-transition: all 0.25s ease-in-out;
+                    transition: all 0.25s ease-in-out;
+            @extend .themepack_font_awesome_before;
+        }
+        &:hover {
+            opacity: 0.80;
+        }
+        &.mfp-arrow-left {
+            float: left;
+            &:before {
+                content: "\f104";
+            }
+        }
+        &.mfp-arrow-right {
+            float: right;
+            &:before {
+                content: "\f105";
+            }
+        }
+    }
+    .mfp-close {
+        cursor: pointer;
+    }
+}
+
+body.single {
+    #geodir-wrapper {
+        padding-top: 35px;
+    }
+    #geodir-wrapper-content {
+        @media(max-width: 480px) {
+            padding: 0;
+        }
+    }
+    .geodir_post_taxomomies {
+        background: #f6f8f9;
+        padding: 15px;
+        border-radius: 4px;
     }
 }
