--- a/assets/css/sass/containers.scss
+++ b/assets/css/sass/containers.scss
@@ -55,6 +55,7 @@
         }
     }
 }
+.flocks-heading-container,
 body .flocks-single-heading-container {
     background: #f6f8f9;
     width: 100%;
@@ -1386,7 +1387,6 @@ dl.geodir-tab-head dd a {
                         }
                     }
                     .geodir-post-img {
-                        margin-bottom: 15px;
                         top: 0;
                     }
                     .geodir-entry-content {
@@ -1680,8 +1680,33 @@ dl.geodir-tab-head dd a {
         }
     }
 }
+.logged-out {
+    .geodir-tabs ul.geodir-tabs-content #reviewsTab {
+        #comments .comment-respond .br-wrapper {
+            width: auto;
+        }
+        .comment-form-comment {
+            margin-top: 0;
+        }
+    }
 
+    #reviewsTab {
+        .comment-form {
+            .br-wrapper  {
+                width: auto;
+            }
+            .comment-form-comment {
+                margin: 0;
+                label {
+                    + textarea {
+                        min-height: 300px;
+                    }
 
+                }
+            }
+        }
+    }
+}
 // Review
 #reviewsTab {
     .comments-area {
@@ -1936,26 +1961,28 @@ body .simplemodal-container#simplemodal-container {
 
         .magnify-link {
             background: rgba(0, 0, 0, 0.70);
-            width: 80px;
-            height: 80px;
+            width: 50px;
+            height: 50px;
             text-align: center;
             border: 2px solid rgb(0, 0, 0);
             display: inline-block;
             position: absolute;
-            top: 40%;
-            left: 45%;
-            transform:scale(1.5);
+            right: 0;
+            bottom: 0;
             opacity: 0;
-            transition: transform .2s, opacity .2s;
+            transition:     opacity .2s;
             @media(max-width: 480px) {
                 top: 35%;
             }
             &:before {
                 @extend .themepack_font_awesome_before;
                 content: "\f0b2";
+                height: 100%;
+                width: 100%;
                 color: #fff;
                 font-size: 30px;
-                line-height: 75px;
+                font-size: 20px;
+                line-height: 47.5px;
             }
         }
     }
@@ -1965,6 +1992,8 @@ body .simplemodal-container#simplemodal-container {
         padding: 0;
         opacity: 0;
         min-height: 385px;
+        max-height: 385px;
+        overflow: hidden;
         -webkit-transition: all 0.5s ease-in-out;
            -moz-transition: all 0.5s ease-in-out;
                 transition: all 0.5s ease-in-out;
@@ -1974,6 +2003,7 @@ body .simplemodal-container#simplemodal-container {
         overflow: hidden;
         position: relative;
         min-height: inherit;
+        max-height: none;
     }
     .owl-stage-outer {
         z-index: 1;
